<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="64sp"
            android:id="@+id/alarmTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                tools:src="@drawable/ic_activated_alarm"
                android:id="@+id/alarmActivationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                tools:src="@drawable/ic_item_settings"
                android:id="@+id/alarmItemSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckedTextView
            android:padding="@dimen/dimen_medium"
            android:id="@+id/buttonMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"/>

        <CheckedTextView
            android:padding="@dimen/dimen_medium"
            android:text="@string/tuesday"
            android:id="@+id/buttonTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckedTextView
            android:padding="@dimen/dimen_medium"
            android:text="@string/wednesday"
            android:id="@+id/buttonWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckedTextView
            android:padding="@dimen/dimen_medium"
            android:text="@string/thursday"
            android:id="@+id/buttonThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckedTextView
            android:padding="@dimen/dimen_medium"
            android:text="@string/friday"
            android:id="@+id/buttonFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckedTextView
            android:padding="@dimen/dimen_medium"
            android:text="@string/saturday"
            android:id="@+id/buttonSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckedTextView
            android:padding="@dimen/dimen_medium"
            android:text="@string/sunday"
            android:id="@+id/buttonSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>