<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/hours_input"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:textSize="30sp"
                tools:text="33" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/minutes_input"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textSize="30sp"
                tools:text="33" />

            <LinearLayout
                android:id="@+id/layout_12hours_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <CheckedTextView
                    android:id="@+id/am_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/am"
                    android:textSize="14sp" />

                <CheckedTextView
                    android:id="@+id/pm_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pm"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/hours_mode_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/_12_hours_format" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:id="@+id/melody_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/melody_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/set_melody"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/melody_choose_menu"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/melody">

            <AutoCompleteTextView
                android:id="@+id/melody_auto_complete"
                android:layout_width="164dp"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@string/choose_melody"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:id="@+id/repeat_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/repeat_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/repeat"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_choose"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/repeat">

        <AutoCompleteTextView
            android:id="@+id/repeat_auto_complete"
            android:layout_width="164dp"
            android:layout_height="match_parent"
            android:inputType="none"
            android:text="@string/days"
            android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vibration_layout"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vibration_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/vibration"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_gravity="center_vertical"
            android:id="@+id/vibration_switch"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notification_layout"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/notification_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/notification"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notification_add_menu"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:hint="@string/text">

            <AutoCompleteTextView
                android:layout_gravity="center_vertical"
                android:id="@+id/notification_auto_complete"
                tools:text="Set text"
                android:layout_width="164dp"
                android:layout_height="match_parent"
                android:inputType="none"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_button"/>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageButton
            android:id="@+id/ok_button"
            android:src="@drawable/ic_done_button"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>